--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 MYSQL_HOST='localhost'
-MYSQL_USER="'@'localhost"
-MYSQL_PASSWORD='kiki'
+MYSQL_USER="root"
+MYSQL_PASSWORD=''
 MYSQL_DATABASE='mydatabase'
