--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "mysql2": "^3.9.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
