--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MYSQL_HOST='localhost'
 MYSQL_USER="root"
 MYSQL_PASSWORD=''
 MYSQL_DATABASE='mydatabase'
+OPENAI_API_KEY = 'sk-proj-lQxYErDQdNrCwLjqiVJHT3BlbkFJ1ieH09Yuqz4xcM67dmve'
