--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.9.4",
+    "openai": "^4.38.3",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "readline": "^1.3.0",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
