--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.9.4",
+    "nodemon": "^3.1.0",
     "openai": "^4.38.3",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
