--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MYSQL_HOST='localhost'
 MYSQL_USER="root"
-MYSQL_PASSWORD=''
-MYSQL_DATABASE='mydatabase'
+MYSQL_PASSWORD='root'
+MYSQL_DATABASE='datax'
 OPENAI_API_KEY = 'sk-proj-lQxYErDQdNrCwLjqiVJHT3BlbkFJ1ieH09Yuqz4xcM67dmve'
