--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MYSQL_USER="root"
 MYSQL_PASSWORD='root'
 MYSQL_DATABASE='datax'
 OPENAI_API_KEY = 'sk-proj-lQxYErDQdNrCwLjqiVJHT3BlbkFJ1ieH09Yuqz4xcM67dmve'
+VITE_API_URL=http://localhost:3000
+VITE_PORT=3000
