--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "concurrently \"npm run dev\" \"npm run server\" ",
+    "start": "concurrently \"npm run dev\" \"npm run server\"",
     "server": "nodemon ./server/app.js"
   },
   "dependencies": {
@@ -28,13 +28,13 @@
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
     "readline": "^1.3.0",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "concurrently": "^8.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
-    "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
