error heroku static express port *

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ MYSQL_PASSWORD='root'
 MYSQL_DATABASE='datax'
 OPENAI_API_KEY = 'sk-proj-lQxYErDQdNrCwLjqiVJHT3BlbkFJ1ieH09Yuqz4xcM67dmve'
 VITE_API_URL=http://localhost:3000
-PORT=3000
+VITE_PORT=3000
