--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
+# dist                <-- Supprimez cette ligne pour inclure le répertoire dist dans Git
 dist-ssr
 *.local
 
