error heroku route ajout fichier dis kikit

--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
-MYSQL_HOST='localhost'
-MYSQL_USER="root"
-MYSQL_PASSWORD='root'
-MYSQL_DATABASE='datax'
-OPENAI_API_KEY = 'sk-proj-lQxYErDQdNrCwLjqiVJHT3BlbkFJ1ieH09Yuqz4xcM67dmve'
-VITE_API_URL=http://localhost:3000
+JAWSDB_MARIA_URL='mysql://alahupbjep6bxyud:ll4l3xwkurxlz7zo@eporqep6b4b8ql12.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/d4fcztkaganmi82l'
+
+# Vous pouvez supprimer les variables suivantes associées à la base de données MySQL locale
+# MYSQL_DATABASE=
+# MYSQL_HOST=
+# MYSQL_PASSWORD=
+# MYSQL_USER=
+
+# Conservez les autres variables d'environnement telles quelles
+OPENAI_API_KEY=sk-proj-lQxYErDQdNrCwLjqiVJHT3BlbkFJ1ieH09Yuqz4xcM67dmve
 PORT=3000
+VITE_API_URL='https://localhost:3000'
